[package]
name = "newton_cannon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10.0", features = ["dynamic_linking", "jpeg"]}
bevy-inspector-egui = "0.18.1"
bevy_editor_pls = "0.3.0"
bevy_fly_camera = "0.10.0"
bevy_pancam = "0.8.0"
bounded-vec-deque = "0.1.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

